--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-id-swiper": "^4.0.0",
+    "react-image-magnify": "^2.7.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.5",
     "react-tabs": "^6.1.0",
